gccida/g1/pop_label_level
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/pop_label_level/src/c-decl.c:1756:48: error: use of undeclared identifier 'stru_634008'
warning_with_decl( ( tree)low, ( const char *)&stru_634008.block + 200); 
                                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/pop_label_level/src/c-decl.c:1760:46: error: use of undeclared identifier 'stru_634008'
error_with_decl( ( tree)low, ( const char *)&stru_634008.block + 168); 
                                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/pop_label_level/src/obj/c-decl.o] Error 1
